CHATS_SIT/force-app/main/default/objects/T_APPLN_CASE__c.object
<CustomObject>
    <description>PEAK application Case information, main data table others reference.</description>
   <!-- <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>County_Rejection_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Earned_Income_Rejection_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Earned Income Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADR_CITY_PROVR__c</fullName>
        <description>ADR_CITY_PROVR</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_CITY_PROVR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1_PROVR__c</fullName>
        <description>ADR_LINE_1_PROVR</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_LINE_1_PROVR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE_PROVR__c</fullName>
        <description>ADR_STATE_PROVR</description>
        <label>ADR_STATE_PROVR</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_PROVR__c</fullName>
        <description>ADR_ZIP_PROVR</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_ZIP_PROVR</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_CLOSURE_REASON__c</fullName>
        <label>CASE_CLOSURE_REASON</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBMS_CASE_NUM__c</fullName>
        <label>CBMS Case Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBMS_REF_REASON__c</fullName>
        <label>Referral Reason</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBMS_REF_SOURCE__c</fullName>
        <label>Referral Source</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_CBMS_REF_TYP__c</fullName>
        <label>Referral Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBMS_Referral_Notes__c</fullName>
        <description>CBMS Referral Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>CBMS Referral Notes</inlineHelpText>
        <label>CBMS Referral Notes</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <description>CDE_COUNTY</description>
        <label>CDE_COUNTY</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_INFO_EM__c</fullName>
        <description>CDE_INFO_EM</description>
        <label>CDE_INFO_EM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_INFO_PMC__c</fullName>
        <description>CDE_INFO_PMC</description>
        <label>CDE_INFO_PMC</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_LANG_CORR__c</fullName>
        <description>CDE_LANG_CORR</description>
        <label>CDE_LANG_CORR</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_PHONE_MSG__c</fullName>
        <description>CDE_PHONE_MSG</description>
        <label>CDE_PHONE_MSG</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_HOMELESS__c</fullName>
        <description>DTE_BEGIN_HOMELESS</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_BEGIN_HOMELESS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_HOMELESS__c</fullName>
        <description>DTE_END_HOMELESS</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_END_HOMELESS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_RCVD_APPLN__c</fullName>
        <description>DTE_RCVD_APPLN</description>
        <label>DTE_RCVD_APPLN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN__c</fullName>
        <label>IDN_APPLN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_CBMS_REF__c</fullName>
        <label>Referral ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOH_STATE_ID__c</fullName>
        <label>HOH State ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <description>IDN_PROVR</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>IDN_PROVR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_ASSIST_PROVR__c</fullName>
        <description>IND_ASSIST_PROVR</description>
        <label>IND_ASSIST_PROVR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_ASST_HSNG_ADDL__c</fullName>
        <description>IND_ASST_HSNG_ADDL</description>
        <label>IND_ASST_HSNG_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_ASST_HSN__c</fullName>
        <description>IND_ASST_HSN</description>
        <label>IND_ASST_HSN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CHP_ADDL__c</fullName>
        <description>IND_CHP_ADDL</description>
        <label>IND_CHP_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CHP__c</fullName>
        <description>IND_CHP</description>
        <label>IND_CHP</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CLIENT_SIGNED__c</fullName>
        <description>IND_CLIENT_SIGNED</description>
        <label>IND_CLIENT_SIGNED</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_CW_PGM__c</fullName>
        <label>IND_CW_PGM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_FOOD_PGM_ADDL__c</fullName>
        <description>IND_FOOD_PGM_ADDL</description>
        <label>IND_FOOD_PGM_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_FOOD_PGM__c</fullName>
        <description>IND_FOOD_PGM</description>
        <label>IND_FOOD_PGM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_FS_RCVNG_ADDL__c</fullName>
        <description>IND_FS_RCVNG_ADDL</description>
        <label>IND_FS_RCVNG_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_FS_RCVNG__c</fullName>
        <description>IND_FS_RCVNG</description>
        <label>IND_FS_RCVNG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_HAS_ASSET__c</fullName>
        <description>IND_HAS_ASSET</description>
        <label>IND_HAS_ASSET</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_HEAD_START_ADDL__c</fullName>
        <description>IND_HEAD_START_ADDL</description>
        <label>IND_HEAD_START_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_HEAD_START__c</fullName>
        <description>IND_HEAD_START</description>
        <label>IND_HEAD_START</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_IDEA_0_3_ADDL__c</fullName>
        <description>IND_IDEA_0_3_ADDL</description>
        <label>IND_IDEA_0_3_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_IDEA_0_3__c</fullName>
        <description>IND_IDEA_0_3</description>
        <label>IND_IDEA_0_3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_IDEA_3_5_ADDL__c</fullName>
        <description>IND_IDEA_3_5_ADDL</description>
        <label>IND_IDEA_3_5_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_IDEA_3_5__c</fullName>
        <description>IND_IDEA_3_5</description>
        <label>IND_IDEA_3_5</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_INCOME_FED_OTHER_ADDL__c</fullName>
        <description>IND_INCOME_FED_OTHER_ADDL</description>
        <label>IND_INCOME_FED_OTHER_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_INCOME_FED_OTHER__c</fullName>
        <description>IND_INCOME_FED_OTHER</description>
        <label>IND_INCOME_FED_OTHER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_INTER_COUNTY_TRANSFER__c</fullName>
        <label>IND_INTER_COUNTY_TRANSFER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_IS_HOMELESS__c</fullName>
        <description>IND_IS_HOMELESS</description>
        <label>IND_IS_HOMELESS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_LEAP_ADDL__c</fullName>
        <description>IND_LEAP_ADDL</description>
        <label>IND_LEAP_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_LEAP__c</fullName>
        <description>IND_LEAP</description>
        <label>IND_LEAP</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_LVG_CAMPGROUND__c</fullName>
        <description>IND_LVG_CAMPGROUND</description>
        <label>IND_LVG_CAMPGROUND</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_LVG_HOTEL__c</fullName>
        <description>IND_LVG_HOTEL</description>
        <label>IND_LVG_HOTEL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_LVG_OTHER__c</fullName>
        <description>IND_LVG_OTHER</description>
        <label>IND_LVG_OTHER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_LVG_SHELTER__c</fullName>
        <description>IND_LVG_SHELTER</description>
        <label>IND_LVG_SHELTER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_LVG_SUBSTANDARD__c</fullName>
        <description>IND_LVG_SUBSTANDARD</description>
        <label>IND_LVG_SUBSTANDARD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_OTHER_ADDL__c</fullName>
        <description>IND_OTHER_ADDL</description>
        <label>IND_OTHER_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_OTHER__c</fullName>
        <description>IND_OTHER</description>
        <label>IND_OTHER</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_PENSION_ADDL__c</fullName>
        <description>IND_PENSION_ADDL</description>
        <label>IND_PENSION_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_PENSION__c</fullName>
        <description>IND_PENSION</description>
        <label>IND_PENSION</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_REFUGEE_ADDL__c</fullName>
        <description>IND_REFUGEE_ADDL</description>
        <label>IND_REFUGEE_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_REFUGEE__c</fullName>
        <description>IND_REFUGEE</description>
        <label>IND_REFUGEE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_SSI_ADDL__c</fullName>
        <description>IND_SSI_ADDL</description>
        <label>IND_SSI_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_SSI__c</fullName>
        <description>IND_SSI</description>
        <label>IND_SSI</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_WIC_ADDL__c</fullName>
        <description>IND_WIC_ADDL</description>
        <label>IND_WIC_ADDL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_WIC__c</fullName>
        <description>IND_WIC</description>
        <label>IND_WIC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOC_ELG_DETERM__c</fullName>
        <description>LOC_ELG_DETERM</description>
        <label>LOC_ELG_DETERM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FACLTY_PROVR__c</fullName>
        <description>NAM_FACLTY_PROVR</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_FACLTY_PROVR</label>
        <length>51</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST_PROVR__c</fullName>
        <description>NAM_FIRST_PROVR</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_FIRST_PROVR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST_PROVR__c</fullName>
        <description>NAM_LAST_PROVR</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_LAST_PROVR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_APPLN_SEC__c</fullName>
        <description>NBR_APPLN_SEC</description>
        <label>NBR_APPLN_SEC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_LIQUID_AMT__c</fullName>
        <description>NBR_LIQUID_AMT</description>
        <label>NBR_LIQUID_AMT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_NON_LIQUID_AMT__c</fullName>
        <description>NBR_NON_LIQUID_AMT</description>
        <label>NBR_NON_LIQUID_AMT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_CELL__c</fullName>
        <description>NBR_PHONE_CELL</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NBR_PHONE_CELL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_HOME__c</fullName>
        <description>NBR_PHONE_HOME</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NBR_PHONE_HOME</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_MSG_EXTN__c</fullName>
        <description>NBR_PHONE_MSG_EXTN</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NBR_PHONE_MSG_EXTN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_MSG__c</fullName>
        <description>NBR_PHONE_MSG</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NBR_PHONE_MSG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseHold_Gross_Income__c</fullName>
        <label>Household Gross Income</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_EARNED_INCOME__c</fullName>
        <label>Net Earned Income</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAYMENT_MONTH__c</fullName>
        <label>PAYMENT_MONTH</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRE_ELG_DETERM__c</fullName>
        <description>PRE_ELG_DETERM</description>
        <label>PRE_ELG_DETERM</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIOR_COUNTY__c</fullName>
        <label>PRIOR_COUNTY</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRI_METHOD_OF_CON__c</fullName>
        <label>PRI_METHOD_OF_CON</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Primary_method_of_contact</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TXT_LVG_OTHER_CMT__c</fullName>
        <description>TXT_LVG_OTHER_CMT</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>TXT_LVG_OTHER_CMT</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TXT_OTHER__c</fullName>
        <description>TXT_OTHER</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>TXT_OTHER</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WORK_SPECIALIST__c</fullName>
        <label>Colorado Works Worker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UFE_Request_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UFE Request Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IND_ASST_HSN__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{0}</displayFormat>
        <label>Application Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>