CHATS_SIT/force-app/main/default/objects/T_APPLN_CASE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CBMS_CASE_NUM__c</columns>
    <columns>CDE_CBMS_REF_TYP__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IDN_CBMS_REF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>AC-96798</value>
    </filters>
    <label>All</label>
</ListView>