CHATS_SIT/force-app/main/default/objects/T_APPLN_CASE__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>AC-247562</value>
    </filters>
    <label>All</label>
</ListView>