CHATS_SIT/force-app/main/default/objects/T_APPLN_CASE__c/listViews/CBMS_Filter.listView-meta.xml
<ListView>
    <fullName>CBMS_Filter</fullName>
    <columns>NAME</columns>
    <columns>CBMS_CASE_NUM__c</columns>
    <columns>IDN_EXTNL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IDN_CBMS_REF__c</columns>
    <columns>CDE_CBMS_REF_TYP__c</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CBMS_REF_REASON__c</columns>
    <columns>CBMS_Referral_Notes__c</columns>
    <columns>IND_INTER_COUNTY_TRANSFER__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CBMS_CASE_NUM__c</field>
        <operation>equals</operation>
        <value>1BB34K6</value>
    </filters>
    <label>CBMS_Filter</label>
</ListView>