CHATS_SIT/force-app/main/default/objects/T_APPLN_CASE__c/listViews/Rachel_CBMS_Filter.listView-meta.xml
<ListView>
    <fullName>Rachel_CBMS_Filter</fullName>
    <columns>NAME</columns>
    <columns>IDN_CBMS_REF__c</columns>
    <columns>CDE_CBMS_REF_TYP__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CBMS_REF_REASON__c</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>DTE_RCVD_APPLN__c</columns>
    <columns>NET_EARNED_INCOME__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>DTE_BEGIN_HOMELESS__c</columns>
    <columns>HOH_STATE_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rachel_CBMS_Filter</label>
</ListView>