CHATS_SIT/force-app/main/default/objects/T_APPLN_CASE__c/listViews/Search_by_External_ID.listView-meta.xml
<ListView>
    <fullName>Search_by_External_ID</fullName>
    <columns>NAME</columns>
    <columns>IDN_EXTNL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>AC-41750</value>
    </filters>
    <label>Search by External ID</label>
</ListView>